# dwb_controller

./: README.md  dwb_controller.yaml
costmap_queue/: CMakeLists.txt  package.xml
costmap_queue/include/costmap_queue/: costmap_queue.hpp  limited_costmap_queue.hpp
costmap_queue/src/: costmap_queue.cpp  limited_costmap_queue.cpp
dwb_core/: CMakeLists.txt  dwb_controller.xml  package.xml
dwb_core/include/dwb_core/: controller_exceptions.hpp  dwb_controller.hpp  exceptions.hpp  footprint_collision_checker.hpp  goal_checker.hpp  illegal_trajectory_tracker.hpp  line_iterator.hpp  publisher.hpp  trajectory_critic.hpp  trajectory_generator.hpp  trajectory_utils.hpp  utils.hpp
dwb_core/src/: dwb_controller.cpp  footprint_collision_checker.cpp  goal_checker.cpp  illegal_trajectory_tracker.cpp  publisher.cpp  trajectory_utils.cpp
dwb_critics/: CMakeLists.txt  default_critics.xml  package.xml
dwb_critics/include/dwb_critics/: alignment_util.hpp  base_obstacle.hpp  goal_align.hpp  goal_dist.hpp  map_grid.hpp  obstacle_footprint.hpp  oscillation.hpp  path_align.hpp  path_angle.hpp  path_dist.hpp  path_dist_pruned.hpp  path_progress.hpp  prefer_forward.hpp  rotate_to_goal.hpp  twirling.hpp
dwb_critics/src/: alignment_util.cpp  base_obstacle.cpp  goal_align.cpp  goal_dist.cpp  map_grid.cpp  obstacle_footprint.cpp  oscillation.cpp  path_align.cpp  path_angle.cpp  path_dist.cpp  path_dist_pruned.cpp  path_progress.cpp  prefer_forward.cpp  rotate_to_goal.cpp  twirling.cpp
dwb_plugins/: CMakeLists.txt  package.xml  plugins.xml
dwb_plugins/cfg/: DWBKinematic.cfg
dwb_plugins/include/dwb_plugins/: kinematic_parameters.hpp  limited_accel_generator.hpp  standard_traj_generator.hpp  velocity_iterator.hpp  xy_theta_iterator.hpp
dwb_plugins/src/: kinematic_parameters.cpp  limited_accel_generator.cpp  standard_traj_generator.cpp  xy_theta_iterator.cpp
