<?xml version="1.0"?>
<package format="2">
  <name>costmap_queue</name>
  <version>0.0.0</version>
  <description>The costmap_queue package</description>
  <maintainer email="amr@todo.todo">amr</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>costmap_2d</depend>
  
  <export>
  </export>
</package>
