<?xml version="1.0"?>
<package format="2">
  <name>dwb_core</name>
  <version>0.0.0</version>
  <description>The dwb_core package</description>
  <maintainer email="amr@todo.todo">amr</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <build_depend>nav_2d_msgs</build_depend>
  <build_export_depend>nav_2d_msgs</build_export_depend>
  <exec_depend>nav_2d_msgs</exec_depend>

  <depend>pluginlib</depend>
  <depend>tf2_ros</depend>
  <depend>nav_core</depend>
  <depend>base_local_planner</depend>
  <depend>costmap_2d</depend>
  <depend>dwb_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2</depend>
  <depend>nav_2d_utils</depend>

  <export>
    <nav_core plugin="${prefix}/dwb_controller.xml"/>
  </export>
</package>
