<?xml version="1.0"?>
<package format="2">
  <name>dwb_plugins</name>
  <version>0.0.0</version>
  <description>The dwb_plugins package</description>
  <maintainer email="amr@todo.todo">amr</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <exec_depend>roscpp</exec_depend>

  <depend>dwb_core</depend>
  <depend>nav_2d_msgs</depend>
  <depend>pluginlib</depend>
  <depend>dynamic_reconfigure</depend>

  <export>
    <dwb_core plugin="${prefix}/plugins.xml"/>
  </export>
</package>
